# KG_2_Project

./: README.md  컴퓨터가인식하는그리퍼열고닫힌상태.py
AGV_team/: README.md  agvtest.py  go_ahead.py  map.pgm  map.yaml
AGV_team/aseembly/: CMakeLists.txt  package.xml
AGV_team/aseembly/config/: joint_names_aseembly.yaml
AGV_team/aseembly/launch/: display.launch  display.launch.py  gazebo.launch  robot_state_publisher.launch.py
AGV_team/aseembly/urdf/: aseembly.urdf
PLC_team/: PLC(XBCH) 인버터(M100)사용방법.docx  README.md  주간 일정 계획.docx
PLC_team/Conveyor_Defect_detection/: webcam(qr) reader.py
PLC_team/PC_INV/: PLC Register Reading.py  Python Inv Websocket Controll Client.py
PLC_team/PC_PLC/: Mini PLC Coil Controll with Python.py  PLC Coil Controll with Python.py  PLC Recive to Python.py
PLC_team/PC_PLC(test)/: test.py  test3.py  test5.py
PLC_team/PLC 분류 작업/: esp32_to_python_camera.py  python_to_esp32_Ethernet.py
PLC_team/PLC-Conveyer/: Python Inv Websocket Controll Client.py  pi_cam_QR_motor_controll.py  python_arduino_survomotor_controll.py
PLC_team/PLC-PC 485 통신/: pc에서 plc 신호 송신.py
PLC_team/PLC-PC(485)/: PLC Coil Controll with Python.PY  Python Inv Direct Controll.py  Python Inv Websocket Controll Client.py
PLC_team/Pusher/: Stepping Motor Controll with Python.py
PLC_team/final/: Final_Pi(PLC)_code.py  Final_RaspberryPi(PLC).py  Final_RaspberryPi(PLC)_test.py  Final_Server(PLC).py
PLC_team/main_code/: Python Inv Websocket Controll Client(local).py  Python Inv Websocket Controll Server.py  ros2_topic_sub.py
PLC_team/회의록/: 24.10.8 최종 프로젝트 관련 아이디어 회의록.docx  회의록 양식.docx
ROOBOTARM_team/: QR_code.py  QR_detect_move.py  README.md  block_color_detect_pose.py  blockcolor_find.py  boundingbox_central.py  boundingbox_central_webcam.py  gipper_reset.py  gnerate_QRcode.py  main.py  main_QR.py  main_QR_2_win.py  main_QR_3_win.py  main_QRcode_(clinet).py  main_QRcode_(clinet)_1.py  main_QRcode_(clinet)_5.py  main_QRcode_(clinet)_6.py  main_QRcode_(clinet)_7.py  main_QRcode_(clinet)_8.py  main_QRcode_ubu.py  main_QRcode_ubu_(clinet)_4.py  main_QRcode_ubu_(server).py  main_QRcode_ubu_cam(clinet) copy.py  main_QRcode_ubu_cam(server).py  main_QRcode_win.py  main_최종.py  red_dot_cen_fixed.py  reddot_cen_adjustment.py  reset.py  ros_robotarm_pub.py  ros_robotarm_pub_1.py  ros_robotarm_pub_patient_list.py  ros_robotarm_pub_수정.py  test.py  udp_cam_cv_serial(pi_client).py  udp_revice_pi_opencv(pc_server).py  yolo_box_detection .py  yolo_box_detection _1.py  yolo_box_detection _2.py  yolo_box_detection _3.py  (+1 more)
ROOBOTARM_team/project2/: bbbb.py  yolo_box_detection_4_1.py  yolo_function.py  로봇암과_픽셀_사이_관계_코드.py
ROOBOTARM_team/robot_con/: gipper_reset.py  reset.py  test.py
ROS_team/: README.md
ROS_team/ros2_flask_app/: app.py  (+2 more)
ROS_team/src/robot_monitoring/: CMakeLists.txt  package.xml  setup.py
ROS_team/src/robot_monitoring/robot_monitoring/: robot_monitoring_node.py
ROS_team/src/robot_monitoring/srv/: RobotCommand.srv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
(+312 files in other folders)
